fix: ajustes do JWT do HealthCare
