# docs/swagger.json
@@ -6,6 +6,19 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"HealthCareProposalNotification": {
+				"properties": {
+					"signedPayment": {
+						"type": "string",
+						"description": "Pagamento assinado"
+					}
+				},
+				"required": [
+					"signedPayment"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
 			"PetProposalNotification": {
 				"properties": {
 					"signedPayment": {
@@ -256,7 +269,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"type": "object"
+								"$ref": "#/components/schemas/HealthCareProposalNotification"
 							}
 						}
 					}
@@ -562,6 +575,79 @@
 				}
 			}
 		},
+		"/v1/maintenance/proposal_email/{pass}/{email}/sendEmail": {
+			"get": {
+				"operationId": "SendMailProposalWithParams",
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"additionalProperties": true,
+									"type": "object"
+								}
+							}
+						},
+						"description": "Retrieved"
+					},
+					"404": {
+						"content": {
+							"application/json": {}
+						},
+						"description": "NotFound"
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "pass",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/v1/maintenance/update_old_clients/{proposalId}": {
+			"get": {
+				"operationId": "UpdateProposal",
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {}
+						},
+						"description": "Retrieved"
+					},
+					"404": {
+						"content": {
+							"application/json": {}
+						},
+						"description": "NotFound"
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "proposalId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/v1/maintenance/update-plan-type": {
 			"post": {
 				"operationId": "UpdatePlanType",
@@ -570,7 +656,19 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "string"
+									"properties": {
+										"success": {
+											"type": "boolean"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message",
+										"success"
+									],
+									"type": "object"
 								}
 							}
 						},
